agrege titulo con h1

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Exlusive CGKR Store</title>
 </head>
 <body>
-    <h1>Hola, esta es mi pagina</h1>
-    <h4>mi pagina es bakanghhrn</h4>
-    <h5>esto es h5</h5>
+    <nav>   
+        <div>
+            <h1 class="hola">Bienvenido a Exlusive CGKR Store</h1>
+        </div>
+    </nav>
 </body>
 </html>
