--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Exlusive CGKR Store</title>
 </head>
 <body>
-    <nav>   
-        <div>
-            <h1 class="hola">Bienvenido a Exlusive CGKR Store</h1>
-        </div>
-    </nav>
+    <main>
+        <nav>
+            <ul>
+                <li></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
