--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exlusive CGKR Store</title>
+    <link rel="stylesheet" href="CGKR.css">
 </head>
-<body>  
-        <div>
-            <h1 class="hola">Bienvenido a Exlusive CGKR Store</h1>
-        </div>
-    </nav>
-</body>
+<body>
+    <h1>Bienvenido A Exlusive CGKR</h1>
+    <main>
+        <nav>
+            <ul>
+                <p>Listas de Productos</p>
+                <li> <a>Nike</a> </li>
+            </ul>
+        </nav>
+    </main>
+</body>  
 </html>
