--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +7,105 @@
     <link rel="stylesheet" href="CGKR.css">
 </head>
 <body>
-    <h1>Bienvenido A Exlusive CGKR</h1>
-    <main>
-        <nav>
-            <ul>
-                <p>Listas de Productos</p>
-                <li> <a>Nike</a> </li>
-            </ul>
-        </nav>
-    </main>
+    <section class="contenido">
+    <div class="mostrador" id="mostrador"> 
+        <div class="fila">
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img9.jpeg" alt="img9.jpeg">
+                    <p class="description">Nike Modelo 1</p>
+                    <span class="precio">$ 159.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img2.jpg" alt="img2.jpg">
+                    <p class="description">Nike Modelo 2</p>
+                    <span class="precio">$ 199.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img3.webp" alt="img3.webp">
+                    <p class="description">Nike Modelo 3</p>
+                    <span class="precio">$ 149.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img4.webp" alt="img4.webp">
+                    <p class="description">Nike Modelo 4</p>
+                    <span class="precio">$ 119.990 </span>
+                </div>
+            </div>
+        </div>
+        <div class="fila">
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img5.webp" alt="img5.webp">
+                    <p class="description">Nike Modelo 5</p>
+                    <span class="precio">$ 159.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img6.webp" alt="img6.webp">
+                    <p class="description">Nike Modelo 6</p>
+                    <span class="precio">$ 199.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img7.webp" alt="img7.webp">
+                    <p class="description">Nike Modelo 7</p>
+                    <span class="precio">$ 149.990 </span>
+                </div>
+            </div>
+            <div class="item" onclick="cargar(this)">
+                <div class="contenedor-foto">
+                    <img src="Imagenes/img8.jpeg" alt="img8.jpeg">
+                    <p class="description">Nike Modelo 8</p>
+                    <span class="precio">$ 119.990 </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Contenedor del item seleccionado -->
+    <div class="seleccion" id="seleccion">
+        <div class="cerrar" onclick="cerrar()">
+            &#x2715
+        </div>
+        <div class="info">
+            <img src="Imagenes/img9.jpeg" alt="" id="img">
+            <h2 id="modelo">Nike Modelo 1</h2>
+            <p id="descripcion">Descripcion Modelo 1 </p>
+            
+            <span class="precio" id="precio">$159.000</span>
+            
+            <div class="fila"> 
+                <div class="SIZE">
+                    <label for="">SIZE</label>
+                    <select name="" id="">
+                        <option value="">35</option>
+                        <option value="">36</option>
+                        <option value="">37</option>
+                        <option value="">38</option>
+                        <option value="">39</option>
+                        <option value="">40</option>
+                        <option value="">41</option>
+                        <option value="">42</option>
+                        <option value="">43</option>
+                        <option value="">44</option>
+                        <option value="">45</option>
+                    </select>
+                </div>
+                <button>Agregar Al Carrito</button>
+            </div>
+        </div>
+    </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>  
 </html>
