agregue iniciar sesion

--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<html lang="en">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exlusive CGKR Store</title>
+            <!-- Title Page -->  
+            <title>Exclusive CGKR Store</title>
+            <!-- CSS -->
+            <link rel="stylesheet" type="text/CSS" href="estilos.css">
+            <!-- <link rel="stylesheet" type="text/CSS" href="CGKR.css"> -->
 </head>
 <body>
-    <nav>   
-        <div>
-            <h1 class="hola">Bienvenido a Exlusive CGKR Store</h1>
+        <div id="container">
+            
+            <form>
+                <!-- Username -->
+                <label for="name">Username:</label>
+                <input type="name">
+                <!-- Password -->
+                <label for="username">Passwohhhrd:</label>
+                <p><a href="#">Forgot your password?</a>
+                <input type="password">
+                <div id="lower">
+                    <input type="checkbox"><label class="check" for="checkbox">Keep me logged in</label>
+                    <!-- Submit Button -->
+                    <input type="submit" value="Login">
+                </div>
+            </form>       
         </div>
-    </nav>
 </body>
 </html>
