agregue iniciar sesion

--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
             <!-- Title Page -->  
             <title>Exclusive CGKR Store</title>
             <!-- CSS -->
-            <link rel="stylesheet" type="text/CSS" href="estilos.css">
+            <link rel="stylesheet" type="text/CSS" href="CGKR.css">
             <!-- <link rel="stylesheet" type="text/CSS" href="CGKR.css"> -->
 </head>
 <body>
         <div id="container">
-            
-            <form>
+            <form action ="index2.html">
                 <!-- Username -->
                 <label for="name">Username:</label>
-                <input type="name">
+                <input type="name" required placeholder="Nombre">
                 <!-- Password -->
-                <label for="username">Passwohhhrd:</label>
+                <label for="username">Password:</label>
                 <p><a href="#">Forgot your password?</a>
-                <input type="password">
+                <input type="password" required placeholder="Contraseña">
                 <div id="lower">
                     <input type="checkbox"><label class="check" for="checkbox">Keep me logged in</label>
                     <!-- Submit Button -->
