lista navbar prototipo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exlusive CGKR Store</title>
+    <link rel="stylesheet" href="CGKR.css">
 </head>
 <body>
-    <nav>   
-        <div>
-            <h1 class="hola">Bienvenido a Exlusive CGKR Store</h1>
-        </div>
-    </nav>
+    <main>
+        <nav>
+            <ul>
+                <li></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
+    
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<style>
+ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+overflow: hidden;
+background-color: #464040;
+}
+
+li {
+float: left;
+}
+
+li a {
+display: block;
+color: white;
+text-align: center;
+padding: 50px 52px;
+text-decoration: none;
+}
+
+li a:hover {
+background-color: #e01324;
+}
+</style>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#"> INICIO </a></li>
+                <li><a href=""> CATALOGO </a></li>
+                <li><a href="#"> LANZAMIENTO </a></li>
+                <li><a href="#"> OFERTAS </a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+</html>
+
