--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exlusive CGKR Store</title>
     <link rel="stylesheet" href="CGKR.css">
-</head>
-<body>
-    <main>
-        <nav>
-            <ul>
-                <li></li>
-            </ul>
-        </nav>
-    </main>
-</body>
-</html>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<style>
-ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: #464040;
-}
-
-li {
-float: left;
-}
-
-li a {
-display: block;
-color: white;
-text-align: center;
-padding: 50px 52px;
-text-decoration: none;
-}
-
-li a:hover {
-background-color: #e01324;
-}
-</style>
+        
 </head>
 
 <body>
@@ -53,12 +18,24 @@ background-color: #e01324;
         <nav>
             <ul>
                 <li><a href="#"> INICIO </a></li>
-                <li><a href=""> CATALOGO </a></li>
+                <li><a href="#"> CATALOGO </a></li>
                 <li><a href="#"> LANZAMIENTO </a></li>
                 <li><a href="#"> OFERTAS </a></li>
+                <li>
+                    <form action="../../form-result.php" method="post" target="_blank">
+                    </form>
+
+                    <form method="get" action="http://www.google.com/search">
+                        <input type="searc" name="q" results="" />
+                        <button type="submit">buscar <img src="lupa.png" alt="lupa" height="15" /></button>
+                        <input type="hidden" name="sitesearch" />
+                    </form>
+                </li>
             </ul>
         </nav>
     </header>
-</body>
-</html>
 
+
+</body>
+
+</html>
