--- a/index2.html
+++ b/index2.html
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+            <!-- Title Page -->  
+            <title>Exclusive CGKR Store</title>
+            <!-- CSS -->
+            <link rel="stylesheet" type="text/CSS" href="CGKR.css">
+            <!-- <link rel="stylesheet" type="text/CSS" href="CGKR.css"> -->
 </head>
 <body>
-    
-    <h1>hola mundo</h1>
+        <div id="container">
+            <form action ="index4.html">
+                <!-- Username -->
+                <label for="name">Username:</label>
+                <input type="name" required placeholder="Nombre">
+                <!-- Password -->
+                <label for="username">Password:</label>
+                <p><a href="#">Forgot your password?</a>
+                <input type="password" required placeholder="Contraseña">
+                <div id="lower">
+                    <input type="checkbox"><label class="check" for="checkbox">Keep me logged in</label>
+                    <!-- Submit Button -->
+                    <input type="submit" value="Login">
+                    
+                </div>
+            </form>       
+        </div>
 </body>
 </html>
