Muchas Cosas Actualizadas

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img2.jpg" alt="img2.jpg">
+                    <img src="Imagenes/img2.jpeg" alt="img2.jpg">
                     <p class="description">Nike Modelo 2</p>
                     <span class="precio">$ 199.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img3.webp" alt="img3.webp">
+                    <img src="Imagenes/img3.jpeg" alt="img3.webp">
                     <p class="description">Nike Modelo 3</p>
                     <span class="precio">$ 149.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img4.webp" alt="img4.webp">
+                    <img src="Imagenes/img4.jpeg" alt="img4.webp">
                     <p class="description">Nike Modelo 4</p>
                     <span class="precio">$ 119.990 </span>
                 </div>
@@ -42,21 +42,21 @@
         <div class="fila">
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img5.webp" alt="img5.webp">
+                    <img src="Imagenes/img5.jpeg" alt="img5.webp">
                     <p class="description">Nike Modelo 5</p>
                     <span class="precio">$ 159.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img6.webp" alt="img6.webp">
+                    <img src="Imagenes/img6.jpeg" alt="img6.webp">
                     <p class="description">Nike Modelo 6</p>
                     <span class="precio">$ 199.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/img7.webp" alt="img7.webp">
+                    <img src="Imagenes/img7.jpeg" alt="img7.webp">
                     <p class="description">Nike Modelo 7</p>
                     <span class="precio">$ 149.990 </span>
                 </div>
