--- a/Lanzamiento.html
+++ b/Lanzamiento.html
@@ -127,28 +127,28 @@
         <div class="fila">
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/Tilla Lanzamiento D1.jpeg" alt="">
+                    <img src="Imagenes/Limg1.jpeg" alt="">
                     <p class="description">Zapatos De Futbol Adidas</p>
                     <span class="precio">$ 199.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/vans 2.jpeg" alt="">
+                    <img src="Imagenes/Limg2.jpeg" alt="">
                     <p class="description">vans Modelo 2</p>
                     <span class="precio">$ 72.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/vans 3.jpeg" alt="">
+                    <img src="Imagenes/Limg3.jpeg" alt="">
                     <p class="description">Vans Modelo 3</p>
                     <span class="precio">$ 39.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/tilla 4 nike.jpeg" alt="">
+                    <img src="Imagenes/Limg4.jpeg" alt="">
                     <p class="description">Nike Modelo 4</p>
                     <span class="precio">$ 84.990 </span>
                 </div>
@@ -157,28 +157,28 @@
         <div class="fila">
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/Tilla Air 5.jpeg" alt="">
+                    <img src="Imagenes/Limg5.jpeg" alt="">
                     <p class="description">Nike Modelo 5</p>
                     <span class="precio">$ 134.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/tilla convers 6.jpeg" alt="">
+                    <img src="Imagenes/Limg6.jpeg" alt="">
                     <p class="description">Converse Modelo 6</p>
                     <span class="precio">$ 74.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/tilla convers 7.jpeg" alt="">
+                    <img src="Imagenes/Limg7.jpeg" alt="">
                     <p class="description">Converse Modelo 7</p>
                     <span class="precio">$ 74.990 </span>
                 </div>
             </div>
             <div class="item" onclick="cargar(this)">
                 <div class="contenedor-foto">
-                    <img src="Imagenes/tilla convers 8.jpeg" alt="">
+                    <img src="Imagenes/Limg8.jpeg" alt="">
                     <p class="description">Convers Modelo 8</p>
                     <span class="precio">$ 72.990 </span>
                 </div>
