barra de navegacion

--- a/index.html
+++ b/index.html
@@ -7,23 +7,44 @@
     <link rel="stylesheet" href="CGKR.css">
 </head>
 <body>
+<header class="header">
+    <nav class="nav">
+        <a href="#" class="logo nav-link"><img src="img/logocgkr.png" alt="70" height="80"></a>
+        <ul class="nav-menu">
+        <li class="nav-menu-item"><a href="http://127.0.0.1:5500/index.html#" class="nav-menu-link nav-link">Inicio</a>
+        </li>
+        <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Ofertas</a>
+        </li>
+        <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Lanzamiento</a>
+        </li>
+        <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Catalogo</a>
+        </li>
+        </ul>
+        <div class="search"><input type="search" name="q" result="" />
+        <button type="submit">Buscar <img src="img/lupa.jpeg" height ="0" width="10"/></button></div>
+    </nav>
+</header>
+<main>
+</main>
+</body>
+<body>
     <html>
         <body>
             <div class="slide">
                 <div class="slide-inner">
                     <input class="slide-open" type="radio" id="slide-1" 
-                          name="slide" aria-hidden="true" hidden="" checked="checked">
+                    name="slide" aria-hidden="true" hidden="" checked="checked">
                     <div class="slide-item">
                         <img src="img/GettyImages-1326397440.webp">
                         <label class="slide-text"> DESCUBRE LA NUEVA TEMPORADA </label>
                     </div>
                     <input class="slide-open" type="radio" id="slide-2" 
-                          name="slide" aria-hidden="true" hidden="">
+                    name="slide" aria-hidden="true" hidden="">
                     <div class="slide-item">
                         <img src="img/7.jpeg">
                     </div>
                     <input class="slide-open" type="radio" id="slide-3" 
-                          name="slide" aria-hidden="true" hidden="">
+                    name="slide" aria-hidden="true" hidden="">
                     <div class="slide-item">
                         <img src="img/8.png">
                     </div>
