--- a/ofertas.html
+++ b/ofertas.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo nav-link"><img src="img/logocgkr.png" alt="70" height="80"></a>
+            <ul class="nav-menu">
+            <li class="nav-menu-item"><a href="http://127.0.0.1:5500/index.html#" class="nav-menu-link nav-link">Inicio</a>
+            </li>
+            <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Ofertas</a>
+            </li>
+            <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Lanzamiento</a>
+            </li>
+            <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Catalogo</a>
+            </li>
+            </ul>
+            <div class="search"><input type="search" name="q" result="" />
+            <button type="submit">Buscar <img src="img/lupa.jpeg" height ="0" width="10"/></button></div>
+        </nav>
+    </header>
     <section class="contenido">
         <div class="mostrador" id="mostrador">
             <div class="fila">
